# VFH-by-depth-camera

./: CMakeLists.txt  README.txt
config/: config.rviz  mavros_config.yaml  mavros_pluginlists.yaml  px4.params
header/: vfh_algorithm.hpp
launch/: uav_simulator.launch
scripts/: start_sim.sh  start_sim_docker.sh  test_flight_sequence.py
sim/models/house_1/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
sim/models/house_3/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
sim/models/rangefinder/: model.sdf
sim/models/rs_d435/: model.sdf
sim/models/uav_lidar/: model.config  uav_lidar.sdf
sim/models/uav_vision/: uav_vision.sdf
sim/worlds/: mapping_test.world  mapping_village.world
src/: vfh_algorithm.cpp  vfh_node.cpp
